--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@metamask/sdk-react": "^0.32.0",
+    "@peculiar/webcrypto": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "fs": "^0.0.1-security",
     "gun": "^0.2020.1240",
     "i": "^0.3.7",
