--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "^0.0.1-security",
     "gun": "^0.2020.1240",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.0.3",
     "npm": "^11.1.0",
