--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@metamask/sdk-react": "^0.32.0",
     "@peculiar/webcrypto": "^1.5.0",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-table": "^8.21.2",
